feat: 재스케줄링 로직 수정